third_party/move/move-compiler-v2/tests/checking/typing/recursive_structs_malformed.exp

Diagnostics:
error: invalid type instantiation `(&M0::Baz, &mut M0::Baz)`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/recursive_structs_malformed.move:6:28
  │
6 │     struct Baz { f: vector<(&Baz, &mut Baz)> }
  │                            ^^^^^^^^^^^^^^^^
